--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     {% for posts in posts_list %}
-        <h3>{{ posts.title }}</h3>>
+        <h3>{{ posts.title }}</h3>
     <p>{{ posts.description }}</p>
     {{ posts.author }}
     {% endfor %}
