--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -1,14 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html >
 <head>
-    <meta charset="UTF-8">
-    <title>Мини-блог</title>
+	<title>Мой блог</title>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all" />
+
+	<link rel="shortcut icon" href="css/images/favicon.ico" />
+
 </head>
 <body>
-    {% for posts in posts_list %}
-        <h3>{{ posts.title }}</h3>
-    <p>{{ posts.description }}</p>
-    {{ posts.author }}
-    {% endfor %}
+<div class="shell">
+	<div class="border">
+
+		<div id="navigation">
+			<ul>
+			    <li><a href="#" class="active">Главная</a></li>
+			    <li><a href="#">Админ панель</a></li>
+			    
+			</ul>
+		</div>
+
+		<div id="main">
+			<div id="content" class="left">
+				
+				<div class="projects">
+					<h3>Записи</h3>
+					{% for post in posts_list %}
+					<div class="item">
+						<div class="image left">
+							<a href="#"><img src="{{ post.img.url }}" width="200px" /></a>
+						</div>
+						<div class="text left">
+							<h4>{{ post.title }}</h4>
+							<p>{{ post.description }}</p>
+							<p>Автор:  {{ post.author }}</p>
+						</div>
+						<div class="cl">&nbsp;</div>
+					</div>
+					{% endfor %}
+				</div>
+			</div>
+			
+			<div class="cl">&nbsp;</div>
+		</div>
+		
+
+	</div>
+	
+	<div id="footer">
+		<p class="copy right">Copyright &copy;  2022 </p>
+	</div>
+</div>
 </body>
 </html>
